@@ -1,0 +1,9 @@
+(define do-hello
+  (lambda ()
+    (display "hello, world---from Scheme")
+      (newline)))
+
+(define do-print
+  (lambda (text)
+    (display text)
+      (newline)))
